--- a/frontend/library-app/src/App.css
+++ b/frontend/library-app/src/App.css
@@ -107,14 +107,16 @@
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 2em;
+  overflow: auto;
 }
 
 .card-container {
   width: 200px;
+  height: auto;
   border: 1px solid rgba(0, 0, .125);
   margin: 0 auto;
-  border-radius: 5px;
-  overflow: hidden;
+  border-radius: 10px;
+  overflow-x: auto;
   display: flex; /* Use flexbox */
   flex-direction: column; /* Stack children vertically */
   align-items: center; /* Center children horizontally */
